--- a/museostibbert.html
+++ b/museostibbert.html
@@ -14,6 +14,15 @@
         width: 100%;
       }
     </style>
+    
+    <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-131729864-1');
+</script>
+    
   </head>
   <body>
     <div class="grid">
