--- a/typeimaginary.html
+++ b/typeimaginary.html
@@ -14,17 +14,20 @@
         width: 100%;
       }
     </style>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="cursor.js"></script>
   </head>
   <body>
     <div class="grid">
 
       <div class="grid-header header">
             <a class="name header-txt" href="index.html">Natalia Oledzka</a>
-            <!-- <a class="info header-txt">Information</a>
-            <a class="update header-txt">Updated 01.29.2020</a> -->
+            <a class="info header-txt" href="info.html">Information</a>
+            <a class="update header-txt">Updated 04.16.2020</a>
       </div>
 
-
+        <div class="cursor"></div>
 
     <div class="line" id="gos-line"></div>
     <div class="title" id="gos-title">Type Imaginary Project</div>
