--- a/astro.html
+++ b/astro.html
@@ -10,7 +10,7 @@
       .grid {
         display: grid;
         grid-template-columns: repeat(9, 10vw [col-start]);
-        grid-template-rows: repeat(9, 10vh [row-start]);
+        grid-template-rows: repeat(10, 10vh [row-start]);
         width: 100%;
       }
 
@@ -34,7 +34,6 @@
       <div class="grid-header header">
             <a class="name header-txt" href="index.html">Natalia Oledzka</a>
             <a class="info header-txt" href="info.html">Information</a>
-            <a class="update header-txt">Updated 04.16.2020</a>
       </div>
         <div class="cursor"></div>
 
@@ -43,12 +42,12 @@
     <div class="title" id="gos-title">Astro</div>
     <div class="category" id="gos-cat"><p>Typeface Design & Website<p></div>
     <div class="date" id="gos-date"><p>2019<p></div>
-    <div class="course" id="gos-cor"><p>Branding & Identity<p></div>
+    <div class="course" id="gos-cor"><p>Capstone Research: Form and Interaction<p></div>
     <div class="description inner-des" id="gos-des">
 
       A starry web-based interactive typeface built with HTML, CSS, and Javascript for my Capstone Research: Form & Interaction course. We were asked to build a typeface with code that can change via user interaction and have at least two states.
 </br></br>
-      I was intrigued by creating constantly changing states and experimented with parallax movement according to user mouse position. Through hovering the user can also create a sense of dimension within the typeface through changing the size of the modules.
+      I was intrigued by creating constantly changing states and experimented with parallax movement according to user mouse position. Through hovering the user can also create a sense of dimension within the typeface through changing the size of the modules. It has been since adapted to a static typeface, where I became intrigued by experimenting with the repetative texture of the outlined modules.
 
 </br></br>
 
@@ -63,12 +62,13 @@
     <img class="image-100"  src="img/Astro/a4.png"></img>
     <img class="image-100"  src="img/Astro/a6.png"></img>
     <img class="image-100"  src="img/Astro/a1.png"></img>
-    <img class="image-100"  src="img/Astro/a7.png"></img>
+    <div class="inner-des info-links" style="text-align: center; max-width: 100%; padding: 100px;"><a href="https://nat-alia.github.io/InteractionCapstone/Astro%20Zodiac/index.html">Visit the Website (A Work in Progress)</a>
+    <!-- <img class="image-100"  src="img/Astro/a7.png"></img>
     <img class="image-100"  src="img/Astro/a8.png"></img>
 
     <video width="100vw" height="100vh" class="image-100" controls>
       <source src="img/Astro/a-vid.mp4" type="video/mp4">
-    </video>
+    </video> -->
 
 
 
