--- a/index.html
+++ b/index.html
@@ -26,40 +26,42 @@
       <div class="grid-header header">
             <a class="name header-txt" href="index.html">Natalia Oledzka</a>
             <a class="info header-txt" href="info.html">Information</a>
-            <a class="update header-txt">Updated 04.16.2020</a>
+            <!-- <a class="update header-txt">Updated 04.16.2020</a> -->
       </div>
 
-        <div class="cursor"></div>
+      <div class="color"></div>
 
-    <div class="line" id="gos-line"></div>
-    <div class="title" id="gos-title"><a href="grainofsand.html">Grain of Sand</a></div>
-    <img class="index-img" src="img/g.png"></img>
-    <!-- <div class="description" id="gos-des">Book built around an episode of 99% invisible, which explores the crucial and expansive role that sand plays in our built civilization, and how that is at risk of falling apart. Supporting text surrounds the theme of overconsumption.</div> -->
-    <div class="category" id="gos-cat"><p>Book Design<p></div>
-    <div class="date" id="gos-date"><p>2019<p></div>
-    <div class="course" id="gos-cor"><p>Capstone Research: Form & Function<p></div>
+      <div class="cursor"></div>
 
-
-
-
-    <div class="line" id="ms-line"></div>
-    <div class="title" id="ms-title"><a href="museostibbert.html">Museo Stibbert</a></div>
-    <img class="index-img" src="img/ms.png"></img>
-    <!-- <div class="description" id="ms-des">Visual identity for an unique museum in Florence, Italy, which is filled with a wide array of European, Asian and Middle Eastern armour. -->
-<!-- </div> -->
-    <div class="category" id="ms-cat"><p>Visual Identity<p></div>
-    <div class="date" id="ms-date"><p>2019<p></div>
-    <div class="course" id="ms-cor"><p>Branding & Identity<p></div>
+      <div class="line" id="gos-line"></div>
+      <div class="title" id="gos-title"><a href="grainofsand.html">Grain of Sand</a></div>
+      <img class="index-img" src="img/g.png"></img>
+      <!-- <div class="description" id="gos-des">Book built around an episode of 99% invisible, which explores the crucial and expansive role that sand plays in our built civilization, and how that is at risk of falling apart. Supporting text surrounds the theme of overconsumption.</div> -->
+      <div class="category" id="gos-cat"><p>Book Design<p></div>
+      <div class="date" id="gos-date"><p>2019<p></div>
+      <div class="course" id="gos-cor"><p>Capstone Research: Form & Function<p></div>
 
 
 
-    <div class="line" id="az-line"></div>
-    <div class="title" id="az-title"><a href="astro.html">Astro</a></div>
-    <img class="index-img" src="img/az.png"></img>
-    <!-- <div class="description" id="az-des">A starry web-based interactive typeface built with HTML, CSS, and Javascript. </div> -->
-    <div class="category" id="az-cat"><p>Typeface Design & Website<p></div>
-    <div class="date" id="az-date"><p>2019<p></div>
-    <div class="course" id="az-cor"><p>Capstone Research: Form & Interaction<p></div>
+
+      <div class="line" id="ms-line"></div>
+      <div class="title" id="ms-title"><a href="museostibbert.html">Museo Stibbert</a></div>
+      <img class="index-img" src="img/ms.png"></img>
+      <!-- <div class="description" id="ms-des">Visual identity for an unique museum in Florence, Italy, which is filled with a wide array of European, Asian and Middle Eastern armour. -->
+      <!-- </div> -->
+      <div class="category" id="ms-cat"><p>Visual Identity<p></div>
+      <div class="date" id="ms-date"><p>2019<p></div>
+      <div class="course" id="ms-cor"><p>Branding & Identity<p></div>
+
+
+
+      <div class="line" id="az-line"></div>
+      <div class="title" id="az-title"><a href="astro.html">Astro</a></div>
+      <img class="index-img" src="img/az.png"></img>
+      <!-- <div class="description" id="az-des">A starry web-based interactive typeface built with HTML, CSS, and Javascript. </div> -->
+      <div class="category" id="az-cat"><p>Typeface Design & Website<p></div>
+      <div class="date" id="az-date"><p>2019<p></div>
+      <div class="course" id="az-cor"><p>Capstone Research: Form & Interaction<p></div>
 
       <div class="line" id="tip-line"></div>
       <div class="title" id="tip-title"><a href="typeimaginary.html">Type Imaginary Project</a></div>
@@ -69,26 +71,26 @@
       <div class="date" id="tip-date"><p>2019<p></div>
       <div class="course" id="tip-cor"><p>Experimental Typography<p></div>
 
-    <div class="line" id="ai24-line"></div>
-    <div class="title" id="ai24-title">Armour Issue 23</div>
-    <img class="index-img" src="img/ai24.png"></img>
-    <!-- <div class="description" id="ai24-des">Editorial design and layout for Washington University’s culture and style publication. Issue 24 explores our local community in our inspiration, motivations, and daily lives. </div> -->
-    <div class="category" id="ai24-cat"><p>Editorial Design<p></div>
-    <div class="date" id="ai24-date"><p>2019<p></div>
-    <div class="course" id="ai24-cor"><p>Extracurricular<p></div>
-    <div class="comingsoon" id="ai24-cs"><p>Coming Soon<p></div>
+      <div class="line" id="ai24-line"></div>
+      <div class="title" id="ai24-title"><a href="armour.html">Armour Issue 23</a></div>
+      <img class="index-img" src="img/ai24.png"></img>
+      <!-- <div class="description" id="ai24-des">Editorial design and layout for Washington University’s culture and style publication. Issue 24 explores our local community in our inspiration, motivations, and daily lives. </div> -->
+      <div class="category" id="ai24-cat"><p>Editorial Design<p></div>
+      <div class="date" id="ai24-date"><p>2019<p></div>
+      <div class="course" id="ai24-cor"><p>Extracurricular<p></div>
+      <!-- <div class="comingsoon" id="ai24-cs"><p>Coming Soon<p></div> -->
 
 
+      <div class="line" id="mm-line"></div>
+      <div class="title" id="mm-title">Mish Mash</div>
+      <img class="index-img" src="img/mm.png"></img>
+      <!-- <div class="description" id="mm-des">Co-founded and designed a student collaborative zine that explores a new theme in each issue.  The project is about revealing the beauty in the range of interpretations one can have on a given topic, and highlighting and giving space to the incredible talent that exists within our community. </div> -->
+      <div class="category" id="mm-cat"><p>Layout & Project Management<p></div>
+      <div class="date" id="mm-date"><p>2019<p></div>
+      <div class="course" id="mm-cor"><p>Extracurricular<p></div>
+      <div class="comingsoon" id="mm-cs"><p>Coming Soon<p></div>
 
-
-    <div class="line" id="mm-line"></div>
-    <div class="title" id="mm-title">Mish Mash</div>
-    <img class="index-img" src="img/mm.png"></img>
-    <!-- <div class="description" id="mm-des">Co-founded and designed a student collaborative zine that explores a new theme in each issue.  The project is about revealing the beauty in the range of interpretations one can have on a given topic, and highlighting and giving space to the incredible talent that exists within our community. </div> -->
-    <div class="category" id="mm-cat"><p>Layout & Project Management<p></div>
-    <div class="date" id="mm-date"><p>2019<p></div>
-    <div class="course" id="mm-cor"><p>Extracurricular<p></div>
-    <div class="comingsoon" id="mm-cs"><p>Coming Soon<p></div>
+        
 
 
 
