--- a/info.html
+++ b/info.html
@@ -20,6 +20,10 @@
 <script src="cursor.js"></script>
 
 <style>
+  body {
+  cursor: none;
+  }
+
   .grid {
     display: grid;
     grid-template-columns: repeat(9, 10vw [col-start]);
@@ -34,15 +38,14 @@
       <div class="grid-header header">
             <a class="name header-txt" href="index.html">Natalia Oledzka</a>
             <a class="info header-txt" href="info.html">Information</a>
-            <a class="update header-txt">Updated 04.16.2020</a>
+            <!-- <a class="update header-txt">Updated 04.16.2020</a> -->
       </div>
 
       <div class="cursor"></div>
 
-<div class="info-description">
-Hello! I'm currently in my final year of the BFA program in Communication Design at Washington University in St. Louis. I'm originally from Queens, NY. For my senior capstone I'm working on a online library of public domain literature, highlighting the creative work they've inspired.
+<div class="info-description"> I'm currently in my final year of the BFA program in Communication Design at Washington University in St. Louis.  I'm originally from Queens, NY. <br> <br> For my final-semester Senior Capstone I'm working on a online library of public domain literature, highlighting the creative work these classics have inspired. I've been honored to recently recieve a <a href="https://thedesignkids.org/awards/tdk-awards-19" >TDK Award</a>, and am looking for post-graduate opportunties.
 
-I've recently received a TDK Award, and am looking for a post-grad position for the fall after (hopefully!! @coronavirus) a summer of working as a wrangler in Wyoming.
+
 </div>
 
 <div class="info-links">
