--- a/typeimaginary.html
+++ b/typeimaginary.html
@@ -24,7 +24,6 @@
       <div class="grid-header header">
             <a class="name header-txt" href="index.html">Natalia Oledzka</a>
             <a class="info header-txt" href="info.html">Information</a>
-            <a class="update header-txt">Updated 04.16.2020</a>
       </div>
 
         <div class="cursor"></div>
@@ -46,7 +45,7 @@
 </br></br>
   And thus, I present to you the Type Imaginary Project. I say that typefaces today are sets of data living on our screens and computers, filled with various numbers that create a family of glyphs—coordinates, the x and y change between them and more. The web is a particularly apt medium to explore and compare the encoded data that is used to visualize the typefaces that you see before you.
   </br></br>
-    <a class="link" href="https://the-type-imaginary-project.superhi.com/index.html">⮑ Visit the site.</a>
+    <a class="info-links" href="https://the-type-imaginary-project.superhi.com/index.html">Visit the site.</a>
 
   </div>
 </div>
