--- a/astro.html
+++ b/astro.html
@@ -47,7 +47,7 @@
 
       A starry web-based interactive typeface built with HTML, CSS, and Javascript for my Capstone Research: Form & Interaction course. We were asked to build a typeface with code that can change via user interaction and have at least two states.
 </br></br>
-      I was intrigued by creating constantly changing states and experimented with parallax movement according to user mouse position. Through hovering the user can also create a sense of dimension within the typeface through changing the size of the modules. It has been since adapted to a static typeface, where I became intrigued by experimenting with the repetative texture of the outlined modules.
+      I played with constantly changing states and experimented with parallax movement according to user mouse position. Through hovering the user can also create a sense of dimension within the typeface through changing the size of the modules. It has been since adapted to a static typeface, where I became intrigued by experimenting with the repetative texture of the outlined modules.
 
 </br></br>
 
