Update Grain of Sand

--- a/grainofsand.html
+++ b/grainofsand.html
@@ -13,6 +13,28 @@
         grid-template-rows: repeat(15, 10vh [row-start]);
         width: 100%;
       }
+
+      @media only screen and (max-width: 800px) {
+
+        .title {
+          font-size: 160px;
+          margin-top: 100px;
+
+        }
+
+        body {
+          background-color: blue;
+        }
+
+        .inner-des {
+          max-width: 100%;
+        }
+
+        #gos-des {
+          grid-column: 1/ span 10;
+          grid-row: 6 / span 2;
+      }
+
     </style>
 
 
@@ -47,12 +69,10 @@
     <div class="date" id="gos-date"><p>2019<p></div>
     <div class="course" id="gos-cor"><p>Capstone Research: Form & Function<p></div>
     <div class="description inner-des" id="gos-des">
+    This book revolves around the 99% Invisible episode, “Built on Sand,” hosted by Roman Mars, as well as supporting texts about the overarching concept of consumption. The episode explores the extraordinary impact of something very small: sand. Sand is the foundation of our build environment, from the concrete that makes up our city buildings, to the windows placed in them, to the asphalt that makes up our roads. It’s found in the chips in our phones and in the glass cups we drink from.
+</br></br>
+    The large-scale book is a response to the messages within the podcast and is inspired by elements of sand itself. The small monospaced body copy nods to the nature of individual grains of sand, creating  texture. In contrast, the large size of the book underscores the incredible impact that this material has had on our civilization. Looking at the individual letters of the heading, the typeface choice is thin and fragile, evoking the feeble nature of a small grain. Packed together, sand becomes mighty—forming these materials we need to build our world.  It is this interplay of fragility, preciousness, scale, and strength in the type treatments and design decisions that provides an added visual interpretation to the podcast’s messages.
 
-In this final project for our Capstone Research: Form & Function course, we were asked to translate the auditory experience of a podcast into a the form of a book. We wanted to make sure we were contributing to the message in a valuable way, as podcasts are purposefully designed to be listened to.
-</br></br>
-I decided on “Built on Sand,” a 99% Invisible episode hosted by Roman Mars, and featuring both author Vince Beiser and architect Kate Simonen. The episode explores the extraordinary impact of something very small: sand. It examines something seemingly commonplace and unremarkable, and then finding the fascinating parts of it through its incredible impact.  Sand is the foundation of our build environment, from the concrete that makes up our city buildings, to the windows placed in them, to the asphalt that makes up our roads. It’s found in the chips in our phones and in the glass cups we drink from. There is an incredibly large demand for this material, and it’s slowly getting harder to get, creating a black market in some parts of the world. People have been killed over sand. The podcast’s overarching theme is our overconsumption. I also included additional texts that supported that message while offering new angles.
-</br></br>
-I wanted to create a sense of materiality in my design decisions and allude to the nature and scope of sand. The body copy is set in a small point size and in a monospace font, evoking a sense of texture. The letters speak to the individual smallness of each grain of sand that makes up the greater mass. This contrasts with the large format of the book itself, as well as the scale of the type set in Adobe Ming, which serves to speak of the grand impact of this tiny material and the scope and nature of our overconsumption. On the scale of the individual letter, Adobe Ming acts as a thin and fragile serif. Joined tightly with others the letters build strong forms that interlock together. It is this interplay of fragility, preciousness, scale, and strength in the typeface and its treatment that conveys the themes of the podcast.
   </div>
 </div>
 
