--- a/astro.html
+++ b/astro.html
@@ -44,12 +44,10 @@
     <div class="date" id="gos-date"><p>2019<p></div>
     <div class="course" id="gos-cor"><p>Capstone Research: Form and Interaction<p></div>
     <div class="description inner-des" id="gos-des">
-
-      A starry web-based interactive typeface built with HTML, CSS, and Javascript for my Capstone Research: Form & Interaction course. We were asked to build a typeface with code that can change via user interaction and have at least two states.
+      A web-based interactive typeface built with HTML, CSS, and Javascript. I played with constantly changing states and experimented with parallax movement according to user mouse position. Through hovering the user can change the size of the modules, creating a sense of dimension within each letter. The website is currently a work in progress, but you can see a peak of it below.
 </br></br>
-      I played with constantly changing states and experimented with parallax movement according to user mouse position. Through hovering the user can also create a sense of dimension within the typeface through changing the size of the modules. It has been since adapted to a static typeface, where I became intrigued by experimenting with the repetative texture of the outlined modules.
+      Astro has been since adapted to a static typeface, where I focused on experimenting with the repetitive texture of the outlined modules.
 
-</br></br>
 
 
 
