--- a/info.html
+++ b/info.html
@@ -33,6 +33,13 @@
 </style>
   </head>
   <body>
+
+    <div class="mobile">
+      <p>
+      The website is currently being updated. Thank you for checking in! :)
+      </p>
+    </div>
+    
     <div class="grid">
 
       <div class="grid-header header">
