--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
 
   </head>
   <body>
+    <div class="mobile">
+      <p>
+      The website is currently being updated. Thank you for checking in! :)
+      </p>
+    </div>
+
     <div class="grid">
 
       <div class="grid-header header">
@@ -28,6 +34,7 @@
             <a class="info header-txt" href="info.html">Information</a>
             <!-- <a class="update header-txt">Updated 04.16.2020</a> -->
       </div>
+
 
       <div class="color"></div>
 
