--- a/museostibbert.html
+++ b/museostibbert.html
@@ -28,6 +28,13 @@
 
   </head>
   <body>
+
+    <div class="mobile">
+      <p>
+      The website is currently being updated. Thank you for checking in! :)
+      </p>
+    </div>
+    
     <div class="grid">
 
       <div class="grid-header header">
