--- a/typeimaginary.html
+++ b/typeimaginary.html
@@ -19,6 +19,13 @@
     <script src="cursor.js"></script>
   </head>
   <body>
+
+    <div class="mobile">
+      <p>
+      The website is currently being updated. Thank you for checking in! :)
+      </p>
+    </div>
+    
     <div class="grid">
 
       <div class="grid-header header">
