--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <div class="mobile">
       <p>
-      The website is currently being updated. Thank you for checking in! :)
+      The mobile version of this website is currently being updated. Thank you for checking in! :)
       </p>
     </div>
 
