--- a/info.html
+++ b/info.html
@@ -50,7 +50,7 @@
 
       <div class="cursor"></div>
 
-<div class="info-description"> I'm in my final year of the BFA program in Communication Design at Washington University in St. Louis.  I'm originally from Queens, NY. <br> <br> For my final-semester Senior Capstone I'm working on a online library of public domain literature, highlighting the creative work these classics have inspired. I've been honored to recently receive a <a href="https://thedesignkids.org/awards/tdk-awards-19" >TDK Award</a>, and be featured by <a href="https://intern-mag.com/natalia-oledzka/">Intern Magazine</a>, and <a href="https://www.itsnicethat.com/articles/natalia-oledskas-grain-of-sand-graphic-design-010520">It's Nice That</a>. I'm currently looking for post-graduate opportunties.
+<div class="info-description"> I'm in my final year of the BFA program in Communication Design at Washington University in St. Louis.  I'm from Queens, NYC. <br> <br> For my final-semester Senior Capstone I'm working on a online library of public domain literature, highlighting the creative work these classics have inspired. I've been honored to recently receive a <a href="https://thedesignkids.org/awards/tdk-awards-19" >TDK Award</a>, and be featured by <a href="https://intern-mag.com/natalia-oledzka/">Intern Magazine</a>, and <a href="https://www.itsnicethat.com/articles/natalia-oledskas-grain-of-sand-graphic-design-010520">It's Nice That</a>. I'm currently looking for post-graduate opportunties.
 
 
 </div>
